# src/controllers/laboratories/index.js
@@ -1,0 +1,7 @@
+const addLabor = require('./addLabor');
+const getAllLabors = require('./getAllLabors');
+
+module.exports = {
+  addLabor,
+  getAllLabors,
+};
